<resources>
    <string name="app_name">TravelUR</string>
    <string name="startup">Beacome a member...</string>
    <string name="globe_text">Chance to win a FREE World Tour!</string>
    <string name="camera_text">Share experiences with friends and travelers around the world.</string>
    <string name="unlock_text">Unlock valuable personalized giveaways and travel ideas.</string>
    <string name="images_text">See pics and videos from TravelUR friends around the world!</string>
    <string name="sign_in_text">Sign into your account</string>
    <string name="font_awesome_android_icon">&#xf17b;</string>
    <string name="font_awesome_area_chart_icon">&#xf1fe;</string>
    <string name="font_awesome_cubes_icon">&#xf1b3;</string>
    <string name="font_awesome_mobile_phone_icon">&#xf10b;</string>
    <string name="globe">&#xf0ac;</string>
    <string name="camera">&#xf030;</string>
    <string name="hotel">&#xf236;</string>
    <string name="unlock">&#xf09c;</string>
    <string name="images">&#xf03e;</string>
    <string name="close">&#xf00d;</string>
    <string name="arrow">&#xf105;</string>
    <string name="add_friend">&#xf234;</string>
    <string name="friends">&#xf0c0;</string>
    <string name="home">&#xf015;</string>
    <string name="gift">&#xf06b;</string>
    <string name="photo">&#xf03e;</string>
    <string name="alert">&#xf0f3;</string>
    <string name="search">&#xf0f3;</string>
    <string name="bus">&#xf207;</string>
    <string name="settings">&#xf0ad;</string>
    <string name="profile">&#xf007;</string>
    <string name="your_trip_icon">&#xf145;</string>
    <string name="reward_icon">&#xf091;</string>
    <string name="flight_ptice">"\u20B9 xx,xxx"</string>
    <string name="flight_icon">&#xf072;</string>
    <string name="hotel_icon">&#xf236;</string>
    <string name="videos_icon">&#xf008;</string>
    <string name="edit_icon">&#xf040;</string>
    <string name="warning_icon">&#xf071;</string>
    <string name="group_icon">&#xf0c0;</string>
    <string name="posts">&#xe900;</string>
    <string name="arrival">&#xe900;</string>
    <string name="add">&#xf067;</string>
    <string name="open">Open</string>
    <string name="close_">Close</string>
    <string name="flying_from">&#xf072; Flying from...</string>
    <string name="whats_on">Whats on your mind? Share it!</string>
    <string name="somewhere">\@ Somewhere on the planet</string>
    <string name="like">Likes</string>
    <string name="like_filled">&#xf164;</string>
    <string name="comment">Comments</string>
    <string name="comment_filled">&#xf075;</string>
    <string name="share">&#xf064;</string>
    <string name="item_1">Home</string>
    <string name="item_2">Book Trips</string>
    <string name="item_3">Messages</string>
    <string name="item_4">Alerts</string>
    <string name="item_5">More</string>
    <string name="item_6">Friends</string>
    <string name="item_7">Groups</string>
    <string name="item_8">Rewards</string>
    <string name="item_9">Trips</string>
    <string name="item_10">Vacation Packages</string>
    <string name="item_11">Flights</string>
    <string name="item_12">Hotels</string>
    <string name="item_13">Buses</string>
    <string name="edittext_search">Search</string>
    <string name="Friends_Title">Find friends</string>
    <string name="Messages_Title">Messages</string>
    <string name="action_search">Search</string>
    <string name="profile_icon">&#xf007;</string>
    <string name="search_hint">Search</string>
    <string name="app_label">SearchableInterface</string>
    <string name="action_your_trips">your trips</string>
    <string name="action_messages">messages</string>
    <string name="hint_email">Enter an email...</string>
    <string name="hint_password">Enter password...</string>
    <string name="button_signIn">SIGN IN</string>
    <string name="textView_desc_forgotPassword">Forgot your password?</string>
    <string name="textView_desc_newMemberSignUp">Dont have an account? Sign up now</string>
    <string name="textView_desc_oldMemberSignIn">Already a member? Sign in now</string>
    <string name="textView_desc_joinTravelUR">Join TravelUR today</string>
    <string name="textView_desc_firstName">Enter first name...</string>
    <string name="textView_desc_LastName">Enter last name...</string>
    <string name="textView_desc_email">enter an email...</string>
    <string name="textView_desc_confirmEmail">Re-enter email from above</string>
    <string name="button_joinNow">JOIN NOW</string>
    <string name="textView_forgetPassword_noWorry">Not to worry!</string>
    <string name="textView_forgetPassword_body">Please enter your e-mail address below and we will send you a confirmation to reset your password.</string>
    <string name="button_sendNow">SEND NOW</string>
    <string name="button_submit">SUBMIT</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="hint_emailAddress">Your account email address</string>
    <string name="textView_desc_videoLayout_explore">Not yet, let me explore</string>
    <string name="textView_desc_videoLayout_joinNowSignIn">Join Now or Sign In</string>
    <string name="textView_desc_videoLayout_journey">Life is a journey, Share it.</string>
    <string name="signInGuest_text">Guest Login</string>
    <string name="hint_mobileNo">Mobile No.</string>
    <string name="like_filled_text">Like</string>
    <string name="comment_filled_text">Comment</string>
    <string name="share_text">Share</string>
    <string name="navigationText_cancel">Cancellation</string>
    <string name="navigationButton_signOut">Sign Out</string>
    <string name="navigationText_TOS">Terms of service</string>
    <string name="navigationText_HS">Help and support</string>
    <string name="navigationText_vacationPk">Vacation Packages</string>
    <string name="navigationText_buses">Buses</string>
    <string name="navigationText_hotels">Hotels</string>
    <string name="navigationText_flights">Flights</string>
    <string name="navigationText_rewards">Rewards</string>
    <string name="navigationText_trips">Your trips</string>
    <string name="navigationText_profile">View Profile</string>
    <string name="navigationText_settings">Settings</string>
    <string name="edit">&#xf013;</string>
    <string name="editTextView_experience">Edit your experience</string>
    <string name="editExperience">&#xf040;</string>
    <string name="delete">&#xf014;</string>
    <string name="editTextView_delete">Just delete it</string>
    <string name="arrow_forward">&#xf101;</string>
    <string name="arrow_backward">&#xf100;</string>
    <string name="moreTextView_groups">Groups</string>
    <string name="destinations_icon">&#xf279;</string>
    <string name="rewards_icon">&#xf091;</string>
    <string name="alerts_icon">&#xf0f3;</string>
    <string name="moreTextView_rewards">Rewards</string>
    <string name="moreTextView_destinations">Destinations</string>
    <string name="moreTextView_alerts">Alerts</string>
    <string name="no_data_available">No data Available</string>
    <string name="item_emoji">emoji</string>
    <string name="item_location">location</string>
    <string name="item_camera">photos</string>
    <string name="write_post_experience">Your experience</string>
    <string name="write_post_share">Share it ;)</string>
    <string name="globle">&#xf0ac;</string>
    <string name="write_post_message">What\'s on your mind?</string>
    <string name="location">&#xf041;</string>
    <string name="emoji">&#xf118;</string>
    <string name="video_null_pointer_message">null video</string>
    <string name="shareIt_arrays_prompt">Permission</string>
    <string name="share_with">Share with</string>
    <string name="shareitTextView_camera">Camera</string>
    <string name="shareItTextView_gallery">Gallery</string>
    <string name="shareIt_gallery">&#xf03e;</string>
    <string name="shareIt_video">&#xf03d;</string>
    <string name="shareItTextView_video">Video</string>
    <string name="your_comment">Comment</string>
    <string name="text_posts">Posts</string>
    <string name="text_post">Post</string>
    <string name="your_stuff">Your Stuff</string>
    <string name="update">Update</string>
    <string name="text_profile_percentage">We noticed you haven\'t completed your profile.</string>
    <string name="action_settings">Settings</string>
    <string name="button_add">+ Add</string>
    <string name="text_friend">People you may know</string>
    <string name="text_invite_friends">Invite friends</string>
    <string name="text_grow_network">Grow your network</string>
    <string name="text_connect">Connect with adventurous souls</string>
    <string name="text_your_friends">Your Friends</string>
    <string name="text_add_friend">Add Friends</string>
    <string name="text_button_pendingrequest">Pending Requests</string>
    <string name="yourfriends_add">Add</string>
    <string name="no_permission">Permission not granted</string>
    <string-array name="shareIt_arrays">
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="background_info">Background information</string>
    <string name="textView_desc_CountryCode">Country Code</string>
    <string name="textView_desc_PhoneNo">Phone Number</string>
    <string name="textView_desc_DOB">Date of Birth</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="location_info">Location information</string>
    <string name="textView_desc_HomeAirport">Home Airport</string>
    <string name="textView_desc_Country">Country</string>
    <string name="textView_desc_zipcode">Postal/Zip Code</string>
    <string name="textView_desc_HomeAddress">Home Address</string>
    <string name="textView_desc_City">City</string>
    <string name="textView_desc_state">State/Providence/Region</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="profile_photo">Profile Photo</string>
    <string name="change"><u>Change</u></string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Type Current Password</string>
    <string name="new_password">Type Your New Password</string>
    <string name="retype_new_password">Re‑type Your New Password</string>
    <string name="successfully_updated">Account successfully Updated!</string>
    <string name="send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms">terms</string>
    <string name="helpsupport">helpsupport</string>
    <string name="cancelation">cancelation</string>
    <string name="create_group">Create a Group</string>
    <string name="cover_photo">Add Cover Photo</string>
    <string name="upload">Upload</string>
    <string name="group_title">Group Title</string>
    <string name="group_desc">Group Description</string>
    <string name="add_location_info"><u>Add location information</u></string>
    <string name="hide"><u>Hide</u></string>
    <string name="location_name">Location Name</string>
    <string name="country_name">Country Name</string>
    <string name="postal_code">Postal / Zip Code</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="near_by_attractions">Near By Attractions</string>
    <string name="visit_time">Example May ‑ August</string>
    <string name="best_time_of_year">Best time of year to visit</string>
    <string name="nearest_airport">Nearest Airport</string>
    <string name="nearest_train_station">Nearest Train Station</string>
    <string name="nearest_bus_station">Nearest Bus Station</string>
    <string name="read_accept">I have read and accept the</string>
    <string name="grops_terms">Group Terms of Service</string>
    <string name="cancel_underline"><u>Cancel</u></string>
</resources>