<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageView_height"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cover_photo"
                    android:layout_margin="@dimen/activity_layout_margin"/>
                <Button
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/bg_cyan_rounded_panel"
                    android:text="@string/upload"
                    android:textColor="@color/White"
                    android:paddingRight="@dimen/button_width_VS"
                    android:paddingLeft="@dimen/button_width_VS"
                    android:drawableLeft="@drawable/ic_camera_alt_white_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_layout_margin">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editText_height"
                        android:hint="@string/group_title"
                        android:padding="@dimen/padding_S"
                        android:background="@drawable/bg_white_rounded_panel"/>
                    <EditText
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editText_height_XXL"
                        android:hint="@string/group_desc"
                        android:padding="@dimen/padding_S"
                        android:gravity="start|top"
                        android:background="@drawable/bg_white_rounded_panel"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_margin">
                        <TextView
                            android:id="@+id/add_local_info"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/editText_height"
                            android:layout_weight="0.1"
                            android:text="@string/add_location_info"
                            android:textColor="@color/textView_color"
                            android:textSize="@dimen/textView_size_M"
                            android:gravity="center_vertical"
                            android:drawableLeft="@drawable/ic_action_ronded_plus"/>
                        <TextView
                            android:id="@+id/hide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hide"
                            android:gravity="end"
                            android:textSize="@dimen/textView_size_M"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/add_local_info_layout"
                android:layout_margin="@dimen/activity_layout_margin"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/location_name"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/country_name"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/postal_code"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/address_line1"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/address_line2"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/textView_desc_City"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/textView_desc_state"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/near_by_attractions"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <TextView
                    android:layout_marginTop="@dimen/activity_vertical_margin_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_time_of_year"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/visit_time"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <TextView
                    android:layout_marginTop="@dimen/activity_vertical_margin_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_time_of_year"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/nearest_airport"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/nearest_train_station"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
                <EditText
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:hint="@string/nearest_bus_station"
                    android:padding="@dimen/padding_S"
                    android:background="@drawable/bg_white_rounded_panel"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White">
                <LinearLayout
                    android:layout_margin="@dimen/activity_layout_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_accept"
                        android:textSize="@dimen/textView_size_S"
                        android:gravity="center"
                        android:textColor="@color/Gray_Goose"/>
                    <TextView
                        android:layout_marginLeft="@dimen/activity_horizontal_margin_VS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textView_color"
                        android:text="@string/grops_terms"
                        android:gravity="center"
                        android:textSize="@dimen/textView_size_S"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin_XL"
                    android:gravity="end">
                    <Button
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:background="@drawable/bg_cyan_rounded_panel"
                        android:text="@string/create_group"
                        android:textColor="@color/White"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_marginLeft="@dimen/activity_horizontal_margin_L"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel_underline"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>