<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/White">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_margin="@dimen/activity_layout_margin">

        <TextView
            android:layout_weight="1"
            android:textSize="@dimen/textView_size_header"
            android:gravity="right"
            android:id="@+id/groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/group_icon"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark" />

        <TextView
            android:layout_weight="0"
            android:id="@+id/moreTextView_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_S"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/moreTextView_groups"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_s"
        android:background="@color/Gray_Cloud"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_margin="@dimen/activity_layout_margin">

        <TextView
            android:layout_weight="1"
            android:textSize="@dimen/textView_size_header"
            android:gravity="right"
            android:id="@+id/destinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/destinations_icon"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark" />

        <TextView
            android:layout_weight="0"
            android:id="@+id/moreTextView_destinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_S"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/moreTextView_destinations"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_s"
        android:background="@color/Gray_Cloud"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_margin="@dimen/activity_layout_margin">

        <TextView
            android:layout_weight="1"
            android:textSize="@dimen/textView_size_header"
            android:gravity="right"
            android:id="@+id/rewards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/rewards_icon"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark" />

        <TextView
            android:layout_weight="0"
            android:id="@+id/moreTextView_rewards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_S"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/moreTextView_rewards"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_s"
        android:background="@color/Gray_Cloud"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_margin="@dimen/activity_layout_margin">

        <TextView
            android:layout_weight="1"
            android:textSize="@dimen/textView_size_header"
            android:gravity="right"
            android:id="@+id/alerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/alerts_icon"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark" />

        <TextView
            android:layout_weight="0"
            android:id="@+id/moreTextView_alerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_S"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/moreTextView_alerts"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark" />
    </LinearLayout>

</LinearLayout>